EXTRA_DIST = 	warc-tools/misc/statistic.sh \
	warc-tools/misc/readme \
	warc-tools/misc/afsmhdl.c \
	warc-tools/misc/DEBIAN/control \
	warc-tools/misc/DEBIAN/postinst \
	warc-tools/misc/DEBIAN/postrm \
	warc-tools/misc/beautifier.sh \
	warc-tools/misc/dbg \
	warc-tools/makefile \
	warc-tools/utest/header.c \
	warc-tools/utest/uuid.c \
	warc-tools/utest/server.c \
	warc-tools/utest/record.c \
	warc-tools/utest/a2w.c \
	warc-tools/utest/client.c \
	warc-tools/utest/readme \
	warc-tools/utest/string.c \
	warc-tools/utest/anvl.c \
	warc-tools/utest/warcgzip.c \
	warc-tools/utest/arcrecord.c \
	warc-tools/utest/arcfile.c \
	warc-tools/utest/getopt.c \
	warc-tools/utest/bloc.c \
	warc-tools/utest/outputs/CUnit-List.xsl \
	warc-tools/utest/outputs/CUnit-Run.xsl \
	warc-tools/utest/list.c \
	warc-tools/utest/hash.c \
	warc-tools/utest/regexp.c \
	warc-tools/utest/file.c \
	warc-tools/utest/object.c \
	warc-tools/utest/hdline.c \
	warc-tools/utest/test.sh \
	warc-tools/utest/warcgunzip.c \
	warc-tools/readme \
	warc-tools/license/apache2-license \
	warc-tools/version \
	warc-tools/contrib/jhove/jhove-warc-src.tgz \
	warc-tools/contrib/jhove/readme \
	warc-tools/contrib/jhove/jhove-warc.patch \
	warc-tools/contrib/jhove/install \
	warc-tools/contrib/java/readme \
	warc-tools/contrib/java/build.xml \
	warc-tools/contrib/java/src/Main.java \
	warc-tools/contrib/java/src/wfilei.java \
	warc-tools/contrib/java/src/wrecord.java \
	warc-tools/contrib/java/src/wfile.java \
	warc-tools/contrib/java/src/wrecordi.java \
	warc-tools/contrib/java/src/awanvl.warc \
	warc-tools/contrib/java/install \
	warc-tools/contrib/java/awanvl.warc \
	warc-tools/contrib/httrack/httrack2warc.sh \
	warc-tools/contrib/httrack/httrack_warc_plugin.h \
	warc-tools/contrib/httrack/warctime.h \
	warc-tools/contrib/httrack/httrack_warc_plugin.c \
	warc-tools/contrib/httrack/readme \
	warc-tools/contrib/httrack/warctime-osx.c \
	warc-tools/contrib/httrack/warcplug.h \
	warc-tools/contrib/httrack/warctime.c \
	warc-tools/contrib/httrack/warcplug.c \
	warc-tools/contrib/browser/wpath.py \
	warc-tools/contrib/browser/rewrite.py \
	warc-tools/contrib/browser/index/wpath.py \
	warc-tools/contrib/browser/index/__init__.py \
	warc-tools/contrib/browser/index/keypath.py \
	warc-tools/contrib/browser/index/timetools.py \
	warc-tools/contrib/browser/index/look.py \
	warc-tools/contrib/browser/index/warcindex.py \
	warc-tools/contrib/browser/index/filesort.py \
	warc-tools/contrib/browser/browser.py \
	warc-tools/contrib/browser/readme \
	warc-tools/contrib/browser/warc-browse \
	warc-tools/contrib/browser/static/hanzo_button-1.png \
	warc-tools/contrib/browser/static/srchtxt.png \
	warc-tools/contrib/browser/static/wb.css \
	warc-tools/contrib/browser/proxy.tac \
	warc-tools/contrib/browser/templates/index.tmpl \
	warc-tools/contrib/browser/templates/nosearchresults.tmpl \
	warc-tools/contrib/browser/templates/footer.tmpl \
	warc-tools/contrib/browser/templates/header.tmpl \
	warc-tools/contrib/browser/templates/searchresults.tmpl \
	warc-tools/contrib/browser/templates/404.tmpl \
	warc-tools/contrib/browser/warcutils.py \
	warc-tools/contrib/youtube/readme \
	warc-tools/contrib/youtube/youtube2warc.sh \
	warc-tools/contrib/youtube/youtube-dl \
	warc-tools/contrib/youtube/urls.txt \
	warc-tools/contrib/curl/url2warc.py \
	warc-tools/contrib/curl/readme \
	warc-tools/contrib/curl/list.txt \
	warc-tools/contrib/file/readme \
	warc-tools/changelog \
	warc-tools/lib/private/plugin/cunit/MyMem.h \
	warc-tools/lib/private/plugin/cunit/readme \
	warc-tools/lib/private/plugin/cunit/TestDB.c \
	warc-tools/lib/private/plugin/cunit/CUCurses.h \
	warc-tools/lib/private/plugin/cunit/menu.h \
	warc-tools/lib/private/plugin/cunit/Util.h \
	warc-tools/lib/private/plugin/cunit/os/osx/CUnit.h \
	warc-tools/lib/private/plugin/cunit/os/linux/CUnit.h \
	warc-tools/lib/private/plugin/cunit/os/freebsd/CUnit.h \
	warc-tools/lib/private/plugin/cunit/os/openbsd/CUnit.h \
	warc-tools/lib/private/plugin/cunit/os/solaris/CUnit.h \
	warc-tools/lib/private/plugin/cunit/os/cygwin/CUnit.h \
	warc-tools/lib/private/plugin/cunit/CUError.c \
	warc-tools/lib/private/plugin/cunit/Console.c \
	warc-tools/lib/private/plugin/cunit/Automated.c \
	warc-tools/lib/private/plugin/cunit/TestRun.c \
	warc-tools/lib/private/plugin/cunit/Console.h \
	warc-tools/lib/private/plugin/cunit/CUError.h \
	warc-tools/lib/private/plugin/cunit/Basic.c \
	warc-tools/lib/private/plugin/cunit/TestDB.h \
	warc-tools/lib/private/plugin/cunit/MyMem.c \
	warc-tools/lib/private/plugin/cunit/TestRun.h \
	warc-tools/lib/private/plugin/cunit/Util.c \
	warc-tools/lib/private/plugin/cunit/Basic.h \
	warc-tools/lib/private/plugin/cunit/Automated.h \
	warc-tools/lib/private/plugin/cunit/menu.c \
	warc-tools/lib/private/plugin/event/evdns.c \
	warc-tools/lib/private/plugin/event/min_heap.c \
	warc-tools/lib/private/plugin/event/signal.c \
	warc-tools/lib/private/plugin/event/evutil.h \
	warc-tools/lib/private/plugin/event/evrpc.h \
	warc-tools/lib/private/plugin/event/strlcpy.c \
	warc-tools/lib/private/plugin/event/log.c \
	warc-tools/lib/private/plugin/event/http-internal.h \
	warc-tools/lib/private/plugin/event/evutil.c \
	warc-tools/lib/private/plugin/event/readme \
	warc-tools/lib/private/plugin/event/log.h \
	warc-tools/lib/private/plugin/event/poll.c \
	warc-tools/lib/private/plugin/event/strlcpy-internal.h \
	warc-tools/lib/private/plugin/event/event.c \
	warc-tools/lib/private/plugin/event/event_tagging.c \
	warc-tools/lib/private/plugin/event/event-internal.h \
	warc-tools/lib/private/plugin/event/out.freebsd \
	warc-tools/lib/private/plugin/event/os/osx/event-config.h \
	warc-tools/lib/private/plugin/event/os/osx/config.h \
	warc-tools/lib/private/plugin/event/os/linux/event-config.h \
	warc-tools/lib/private/plugin/event/os/linux/config.h \
	warc-tools/lib/private/plugin/event/os/event-config.h \
	warc-tools/lib/private/plugin/event/os/freebsd/event-config.h \
	warc-tools/lib/private/plugin/event/os/freebsd/config.h \
	warc-tools/lib/private/plugin/event/os/openbsd/event-config.h \
	warc-tools/lib/private/plugin/event/os/openbsd/config.h \
	warc-tools/lib/private/plugin/event/os/solaris/event-config.h \
	warc-tools/lib/private/plugin/event/os/solaris/config.h \
	warc-tools/lib/private/plugin/event/os/config.h \
	warc-tools/lib/private/plugin/event/os/cygwin/event-config.h \
	warc-tools/lib/private/plugin/event/os/cygwin/config-noepoll.h \
	warc-tools/lib/private/plugin/event/os/cygwin/event-config-noepoll.h \
	warc-tools/lib/private/plugin/event/os/cygwin/config.h \
	warc-tools/lib/private/plugin/event/os/netbsd/event-config.h \
	warc-tools/lib/private/plugin/event/os/netbsd/config.h \
	warc-tools/lib/private/plugin/event/kqueue.c \
	warc-tools/lib/private/plugin/event/out.cygwin \
	warc-tools/lib/private/plugin/event/event.h \
	warc-tools/lib/private/plugin/event/compat/sys/queue.h \
	warc-tools/lib/private/plugin/event/compat/sys/_time.h \
	warc-tools/lib/private/plugin/event/out.linux \
	warc-tools/lib/private/plugin/event/evhttp.h \
	warc-tools/lib/private/plugin/event/evrpc.c \
	warc-tools/lib/private/plugin/event/WIN32-Code/tree.h \
	warc-tools/lib/private/plugin/event/WIN32-Code/win32.c \
	warc-tools/lib/private/plugin/event/WIN32-Code/misc.h \
	warc-tools/lib/private/plugin/event/WIN32-Code/misc.c \
	warc-tools/lib/private/plugin/event/WIN32-Code/config.h \
	warc-tools/lib/private/plugin/event/evport.c \
	warc-tools/lib/private/plugin/event/out.solaris \
	warc-tools/lib/private/plugin/event/http.c \
	warc-tools/lib/private/plugin/event/evdns.h \
	warc-tools/lib/private/plugin/event/devpoll.c \
	warc-tools/lib/private/plugin/event/select.c \
	warc-tools/lib/private/plugin/event/out.openbsd \
	warc-tools/lib/private/plugin/event/evsignal.h \
	warc-tools/lib/private/plugin/event/out.mac \
	warc-tools/lib/private/plugin/event/epoll.c \
	warc-tools/lib/private/plugin/event/epoll_sub.c \
	warc-tools/lib/private/plugin/event/buffer.c \
	warc-tools/lib/private/plugin/event/min_heap.h \
	warc-tools/lib/private/plugin/event/evbuffer.c \
	warc-tools/lib/private/plugin/event/evrpc-internal.h \
	warc-tools/lib/private/plugin/readme \
	warc-tools/lib/private/plugin/lighttpd/modfcgi.c \
	warc-tools/lib/private/plugin/lighttpd/readme \
	warc-tools/lib/private/plugin/lighttpd/modcgi.c \
	warc-tools/lib/private/plugin/lighttpd/lighttpd.conf \
	warc-tools/lib/private/plugin/gzip/trees.h \
	warc-tools/lib/private/plugin/gzip/uncompr.c \
	warc-tools/lib/private/plugin/gzip/deflate.h \
	warc-tools/lib/private/plugin/gzip/inffixed.h \
	warc-tools/lib/private/plugin/gzip/inftrees.c \
	warc-tools/lib/private/plugin/gzip/inffast.c \
	warc-tools/lib/private/plugin/gzip/inflate.c \
	warc-tools/lib/private/plugin/gzip/inflate.h \
	warc-tools/lib/private/plugin/gzip/zutil.h \
	warc-tools/lib/private/plugin/gzip/readme \
	warc-tools/lib/private/plugin/gzip/deflate.c \
	warc-tools/lib/private/plugin/gzip/adler32.c \
	warc-tools/lib/private/plugin/gzip/wgzipbit.h \
	warc-tools/lib/private/plugin/gzip/wgzipbit.c \
	warc-tools/lib/private/plugin/gzip/zutil.c \
	warc-tools/lib/private/plugin/gzip/wos.h \
	warc-tools/lib/private/plugin/gzip/trees.c \
	warc-tools/lib/private/plugin/gzip/zconf.h \
	warc-tools/lib/private/plugin/gzip/inftrees.h \
	warc-tools/lib/private/plugin/gzip/inffast.h \
	warc-tools/lib/private/plugin/gzip/infback.c \
	warc-tools/lib/private/plugin/gzip/crc32.c \
	warc-tools/lib/private/plugin/gzip/compress.c \
	warc-tools/lib/private/plugin/gzip/crc32.h \
	warc-tools/lib/private/plugin/gzip/zlib.h \
	warc-tools/lib/private/plugin/regex/readme \
	warc-tools/lib/private/plugin/regex/regex.h \
	warc-tools/lib/private/plugin/regex/regex.c \
	warc-tools/lib/private/plugin/tiger/tiger.c \
	warc-tools/lib/private/plugin/tiger/readme \
	warc-tools/lib/private/plugin/tiger/tiger.h \
	warc-tools/lib/private/plugin/python/wbloc.i \
	warc-tools/lib/private/plugin/python/wclass.i \
	warc-tools/lib/private/plugin/python/apyback.h \
	warc-tools/lib/private/plugin/python/wrapper_wbloc.i \
	warc-tools/lib/private/plugin/python/wbloc.py \
	warc-tools/lib/private/plugin/python/warc.i \
	warc-tools/lib/private/plugin/python/list.i \
	warc-tools/lib/private/plugin/python/apybless.i \
	warc-tools/lib/private/plugin/python/aclass.i \
	warc-tools/lib/private/plugin/python/pyback.h \
	warc-tools/lib/private/plugin/python/arecord.py \
	warc-tools/lib/private/plugin/python/wrecord.py \
	warc-tools/lib/private/plugin/python/arc.i \
	warc-tools/lib/private/plugin/python/apybless.h \
	warc-tools/lib/private/plugin/python/wpybless.c \
	warc-tools/lib/private/plugin/python/wfield.c \
	warc-tools/lib/private/plugin/python/wrapper_wbloc.h \
	warc-tools/lib/private/plugin/python/apybless.c \
	warc-tools/lib/private/plugin/python/record.i \
	warc-tools/lib/private/plugin/python/file.i \
	warc-tools/lib/private/plugin/python/wpybless.h \
	warc-tools/lib/private/plugin/python/wfile.py \
	warc-tools/lib/private/plugin/python/wtypes.py \
	warc-tools/lib/private/plugin/python/afile.py \
	warc-tools/lib/private/plugin/python/afile.i \
	warc-tools/lib/private/plugin/python/wfield.h \
	warc-tools/lib/private/plugin/python/anvl.i \
	warc-tools/lib/private/plugin/python/wuuid.i \
	warc-tools/lib/private/plugin/python/wpybless.i \
	warc-tools/lib/private/plugin/python/wfield.i \
	warc-tools/lib/private/plugin/python/arecord.i \
	warc-tools/lib/private/plugin/python/wrapper_wbloc.c \
	warc-tools/lib/private/plugin/ruby/wbloc.i \
	warc-tools/lib/private/plugin/ruby/warctools.i \
	warc-tools/lib/private/plugin/ruby/wclass.i \
	warc-tools/lib/private/plugin/ruby/wruby.h \
	warc-tools/lib/private/plugin/ruby/warc.i \
	warc-tools/lib/private/plugin/ruby/payload.h \
	warc-tools/lib/private/plugin/ruby/payload.i \
	warc-tools/lib/private/plugin/ruby/wrbbless.c \
	warc-tools/lib/private/plugin/ruby/payload.c \
	warc-tools/lib/private/plugin/ruby/wfile.rb \
	warc-tools/lib/private/plugin/ruby/wrbbless.h \
	warc-tools/lib/private/plugin/ruby/wrbbless.i \
	warc-tools/lib/private/plugin/ruby/wfield.c \
	warc-tools/lib/private/plugin/ruby/wbloc.rb \
	warc-tools/lib/private/plugin/ruby/record.i \
	warc-tools/lib/private/plugin/ruby/file.i \
	warc-tools/lib/private/plugin/ruby/wrecord.rb \
	warc-tools/lib/private/plugin/ruby/wfield.h \
	warc-tools/lib/private/plugin/ruby/wfield.i \
	warc-tools/lib/private/plugin/apache/mod_warc.c \
	warc-tools/lib/private/plugin/apache/readme \
	warc-tools/lib/private/wfsm.x \
	warc-tools/lib/private/wclass.x \
	warc-tools/lib/private/wrecord.x \
	warc-tools/lib/private/wlist.x \
	warc-tools/lib/private/wfile.x \
	warc-tools/lib/private/wbloc.x \
	warc-tools/lib/private/arecord.x \
	warc-tools/lib/private/wstring.c \
	warc-tools/lib/private/wsign.h \
	warc-tools/lib/private/wkv.h \
	warc-tools/lib/private/wclient.h \
	warc-tools/lib/private/wregexp.h \
	warc-tools/lib/private/wbloc.c \
	warc-tools/lib/private/afile.c \
	warc-tools/lib/private/jwrap.c \
	warc-tools/lib/private/whash.h \
	warc-tools/lib/private/wstring.h \
	warc-tools/lib/private/wbloc.h \
	warc-tools/lib/private/wlist.h \
	warc-tools/lib/private/readme \
	warc-tools/lib/private/wfsmanvl.c \
	warc-tools/lib/private/wclass.c \
	warc-tools/lib/private/wheader.h \
	warc-tools/lib/private/wmem.h \
	warc-tools/lib/private/wfsmanvl.h \
	warc-tools/lib/private/wclient.c \
	warc-tools/lib/private/wrecord.c \
	warc-tools/lib/private/wgetopt.c \
	warc-tools/lib/private/wlist.c \
	warc-tools/lib/private/wversion.h \
	warc-tools/lib/private/os/wcsafe.c \
	warc-tools/lib/private/os/readme \
	warc-tools/lib/private/os/mingw/wcsafe.c \
	warc-tools/lib/private/os/mingw/wcsafe.h \
	warc-tools/lib/private/os/mingw/wmktmp.h \
	warc-tools/lib/private/os/mingw/wmktmp.c \
	warc-tools/lib/private/os/wcsafe.h \
	warc-tools/lib/private/os/wmktmp.h \
	warc-tools/lib/private/os/wmktmp.c \
	warc-tools/lib/private/wserver.h \
	warc-tools/lib/private/arecord.c \
	warc-tools/lib/private/afsmhdl.h \
	warc-tools/lib/private/afsmhdl.c \
	warc-tools/lib/private/wuuid.c \
	warc-tools/lib/private/wkv.c \
	warc-tools/lib/private/wregexp.c \
	warc-tools/lib/private/whash.c \
	warc-tools/lib/private/wfsmhdl.h \
	warc-tools/lib/private/whdline.h \
	warc-tools/lib/private/wheader.c \
	warc-tools/lib/private/wanvl.h \
	warc-tools/lib/private/wversion.c \
	warc-tools/lib/private/wuuid.h \
	warc-tools/lib/private/wgzip.h \
	warc-tools/lib/private/wendian.h \
	warc-tools/lib/private/wanvl.c \
	warc-tools/lib/private/wendian.c \
	warc-tools/lib/private/wgzip.c \
	warc-tools/lib/private/wfile.c \
	warc-tools/lib/private/wserver.c \
	warc-tools/lib/private/wgetopt.h \
	warc-tools/lib/public/wfile.h \
	warc-tools/lib/public/wmisc.h \
	warc-tools/lib/public/readme \
	warc-tools/lib/public/wrecord.h \
	warc-tools/lib/public/afile.h \
	warc-tools/lib/public/warc.h \
	warc-tools/lib/public/wport.h \
	warc-tools/lib/public/wrectype.h \
	warc-tools/lib/public/old-wrecord.h \
	warc-tools/lib/public/wclass.h \
	warc-tools/lib/public/arecord.h \
	warc-tools/doc/userguide/captreq2.png \
	warc-tools/doc/userguide/captreq3.png \
	warc-tools/doc/userguide/pdf/x206.html \
	warc-tools/doc/userguide/pdf/x522.html \
	warc-tools/doc/userguide/pdf/x145.html \
	warc-tools/doc/userguide/pdf/x287.html \
	warc-tools/doc/userguide/pdf/x59.html \
	warc-tools/doc/userguide/pdf/index.html \
	warc-tools/doc/userguide/pdf/x91.html \
	warc-tools/doc/userguide/pdf/x186.html \
	warc-tools/doc/userguide/pdf/x415.html \
	warc-tools/doc/userguide/pdf/x300.html \
	warc-tools/doc/userguide/pdf/c16.html \
	warc-tools/doc/userguide/pdf/x222.html \
	warc-tools/doc/userguide/pdf/c3.html \
	warc-tools/doc/userguide/pdf/x668.html \
	warc-tools/doc/userguide/pdf/x39.html \
	warc-tools/doc/userguide/pdf/x351.html \
	warc-tools/doc/userguide/pdf/c319.html \
	warc-tools/doc/userguide/pdf/x174.html \
	warc-tools/doc/userguide/pdf/c126.html \
	warc-tools/doc/userguide/manwarc.sgml.odm \
	warc-tools/doc/userguide/manwarc.sgml \
	warc-tools/doc/userguide/captreq4.png \
	warc-tools/doc/userguide/compile.sh \
	warc-tools/doc/userguide/manwarc.pdf \
	warc-tools/doc/readme \
	warc-tools/doc/warcdoc \
	warc-tools/doc/install \
	warc-tools/app/warcserver.c \
	warc-tools/app/warcvalidator.c \
	warc-tools/app/wrecordbody.c \
	warc-tools/app/arc2warc.c \
	warc-tools/app/warcfilter.c \
	warc-tools/app/man/arc2warc.man \
	warc-tools/app/man/readme \
	warc-tools/app/man/warcserver.man \
	warc-tools/app/man/warcclient.man \
	warc-tools/app/man/warcvalidator.man \
	warc-tools/app/man/warcdump.man \
	warc-tools/app/man/warcfilter.man \
	warc-tools/app/readme \
	warc-tools/app/warcclient.c \
	warc-tools/app/warcvalidator.sh \
	warc-tools/app/python/wpath.py \
	warc-tools/app/python/warcfilter.py \
	warc-tools/app/python/readme \
	warc-tools/app/python/file2warc.py \
	warc-tools/app/python/wgetbloc.py \
	warc-tools/app/python/warcdump.py \
	warc-tools/app/python/arc2warc.sh \
	warc-tools/app/python/arc2warc.py \
	warc-tools/app/python/arcdump.py \
	warc-tools/app/ruby/readme \
	warc-tools/app/ruby/warcdump.rb \
	warc-tools/app/arcopen.c \
	warc-tools/app/arc2warc.sh \
	warc-tools/app/warcdump.c

all-local:
	cd warc-tools && $(MAKE) $(AM_MAKEFLAGS) static

clean-local:
	cd warc-tools && $(MAKE) $(AM_MAKEFLAGS) clean

